unpackaged/main/default/objects/Affiliation__c/Affiliation__c.object-meta.xml
<CustomObject>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>AF-{00000}</displayFormat>
        <label>Affiliation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>